2013-07-25 belangeo <belangeo@gmail.com>

    * Added new object: TableScale, Scales values from a table and writes them into another table.
    - rev 1129

2013-07-22 belangeo <belangeo@gmail.com>

    * Added new object: Granule, another granular synthesis generator.
    - rev 1127

2013-07-16 belangeo <belangeo@gmail.com>

    * Added new object: PVBufTabLoops, phase vocoder buffer with bin independent speed playback (controlled with a PyoTableObject).
    - rev 1126

2013-07-16 belangeo <belangeo@gmail.com>

    * Added new object: PVBufLoops, phase vocoder buffer with bin independent speed playback.
    - rev 1125

2013-07-10 belangeo <belangeo@gmail.com>

    * Added new objects: PVShift, spectral frequency shifter. PVAmpMod and PVFreqMod, frequency independent modulations. 
    - rev 1124

2013-07-01 belangeo <belangeo@gmail.com>

    * Added new objects: PVDelay, spectral delays and PVBuffer, phase vocoder recorder and playback. 
    - rev 1123

2013-06-19 belangeo <belangeo@gmail.com>

    * Added graph() method to DataTable object. Opens a multisliders window to edit the table content. 
    - rev 1120

2013-06-18 belangeo <belangeo@gmail.com>

    * Added new object: PVFilter. Spectral filtering.
    - rev 1119

2013-06-18 belangeo <belangeo@gmail.com>

    * Added new object: PVCross, PVMult, PVMorph. Spectral morphing.
    - rev 1117

2013-06-13 belangeo <belangeo@gmail.com>

    * Added new object: PVAddSynth, Phase Vocoder additive synthesis object.
    - rev 1116

2013-06-11 belangeo <belangeo@gmail.com>

    * Phase Vocoder, first draft. PVAnal, PVSynth, PVTranspose, PVVerb and PVGate.
    - rev 1114

2013-05-27 belangeo <belangeo@gmail.com>

    * E-Pyo: Added "Search in Project Files" option.
    - rev 1108

2013-05-24 belangeo <belangeo@gmail.com>

    * E-Pyo: Added Filters Menu. User-defined text processing functions.
    - rev 1107

2013-05-23 belangeo <belangeo@gmail.com>

    * Now using Sphinx to generate the API documentation.